--- a/flutter_inappwebview_android/pubspec.yaml
+++ b/flutter_inappwebview_android/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_inappwebview_android
+name: flutter_inappwebview
 description: Android implementation of the flutter_inappwebview plugin.
 version: 1.2.0-beta.3
 homepage: https://inappwebview.dev/
